# neon_ascent

./: .gitignore  README.md
NeonAscentv1/: Bonus.cpp  Bonus.h  CMakeLists.txt  Gra.cpp  Gra.h  Gracz.cpp  Gracz.h  Obiekt.h  Platforma.cpp  Platforma.h  gra.h  gracz.h  main.cpp  platforma.h
